// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/UserAvatar Custom Size 1`] = `
<span
  className="inline-block align-middle rounded-full border border-blue-50"
  style={
    Object {
      "height": 49,
      "width": 49,
    }
  }
>
  <svg
    colors={
      Array [
        "#E40134",
        "#213A8F",
        "#3192D0",
        "#63B9E9",
        "#FFFFFF",
      ]
    }
    fill="none"
    height={48}
    name="Dennis"
    size={48}
    viewBox="0 0 36 36"
    width={48}
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      height={36}
      id="mask__beam"
      maskUnits="userSpaceOnUse"
      width={36}
      x={0}
      y={0}
    >
      <rect
        fill="white"
        height={36}
        rx={20}
        width={36}
      />
    </mask>
    <g
      fill="transparent"
      mask="url(#mask__beam)"
    >
      <rect
        fill="#3192D0"
        height={36}
        rx={20}
        width={36}
      />
      <rect
        fill="#FFFFFF"
        height={36}
        rx={36}
        transform="translate(-5 -5) rotate(249 18 18) scale(1)"
        width={36}
        x="0"
        y="0"
      />
      <g
        transform="translate(-1 0) rotate(-9 18 18)"
      >
        <path
          d="M15 19c2 1 4 1 6 0"
          fill="none"
          stroke="black"
          strokeLinecap="round"
        />
        <rect
          fill="black"
          height={2}
          rx={1}
          stroke="none"
          width={1.5}
          x={10}
          y={14}
        />
        <rect
          fill="black"
          height={2}
          rx={1}
          stroke="none"
          width={1.5}
          x={24}
          y={14}
        />
      </g>
    </g>
  </svg>
</span>
`;

exports[`Storyshots UI Elements/UserAvatar Default User Avatar 1`] = `
<span
  className="inline-block align-middle rounded-full border border-blue-50"
  style={
    Object {
      "height": 25,
      "width": 25,
    }
  }
>
  <svg
    colors={
      Array [
        "#E40134",
        "#213A8F",
        "#3192D0",
        "#63B9E9",
        "#FFFFFF",
      ]
    }
    fill="none"
    height={24}
    name="ffthornton"
    size={24}
    viewBox="0 0 36 36"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      height={36}
      id="mask__beam"
      maskUnits="userSpaceOnUse"
      width={36}
      x={0}
      y={0}
    >
      <rect
        fill="white"
        height={36}
        rx={20}
        width={36}
      />
    </mask>
    <g
      fill="transparent"
      mask="url(#mask__beam)"
    >
      <rect
        fill="#FFFFFF"
        height={36}
        rx={20}
        width={36}
      />
      <rect
        fill="#213A8F"
        height={36}
        rx={6}
        transform="translate(6 -2) rotate(16 18 18) scale(1.1)"
        width={36}
        x="0"
        y="0"
      />
      <g
        transform="translate(0 -4) rotate(6 18 18)"
      >
        <path
          d="M15 20c2 1 4 1 6 0"
          fill="none"
          stroke="white"
          strokeLinecap="round"
        />
        <rect
          fill="white"
          height={2}
          rx={1}
          stroke="none"
          width={1.5}
          x={13}
          y={14}
        />
        <rect
          fill="white"
          height={2}
          rx={1}
          stroke="none"
          width={1.5}
          x={21}
          y={14}
        />
      </g>
    </g>
  </svg>
</span>
`;

exports[`Storyshots UI Elements/UserAvatar With Custom Class Name 1`] = `
<span
  className="animate-spin inline-block align-middle rounded-full border border-blue-50"
  style={
    Object {
      "height": 25,
      "width": 25,
    }
  }
>
  <svg
    colors={
      Array [
        "#E40134",
        "#213A8F",
        "#3192D0",
        "#63B9E9",
        "#FFFFFF",
      ]
    }
    fill="none"
    height={24}
    name="Fabian"
    size={24}
    viewBox="0 0 36 36"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      height={36}
      id="mask__beam"
      maskUnits="userSpaceOnUse"
      width={36}
      x={0}
      y={0}
    >
      <rect
        fill="white"
        height={36}
        rx={20}
        width={36}
      />
    </mask>
    <g
      fill="transparent"
      mask="url(#mask__beam)"
    >
      <rect
        fill="#E40134"
        height={36}
        rx={20}
        width={36}
      />
      <rect
        fill="#3192D0"
        height={36}
        rx={6}
        transform="translate(7 7) rotate(217 18 18) scale(1.1)"
        width={36}
        x="0"
        y="0"
      />
      <g
        transform="translate(3.5 3.5) rotate(-7 18 18)"
      >
        <path
          d="M13,20 a1,0.75 0 0,0 10,0"
          fill="white"
        />
        <rect
          fill="white"
          height={2}
          rx={1}
          stroke="none"
          width={1.5}
          x={12}
          y={14}
        />
        <rect
          fill="white"
          height={2}
          rx={1}
          stroke="none"
          width={1.5}
          x={22}
          y={14}
        />
      </g>
    </g>
  </svg>
</span>
`;
